# mcp_server_python

./: .gitignore  README.md  main.py  pyproject.toml
mcp_sv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
